--- a/newmenu.html
+++ b/newmenu.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>IGMP</title>
+    <title>Menu</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="./font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script src="./js/jquery.min.js"></script>
@@ -77,7 +77,7 @@
                                 <a href="./sysSetting/cofiginfo.html" target="mainframe">配置信息</a>
                             </li>
                             <li>
-                                <a href="./sysSetting//upgrade.html" target="mainframe">软件升级</a>
+                                <a href="./sysSetting/upgrade.html" target="mainframe">软件升级</a>
                             </li>
                             <li>
                                 <a>pib/fw升级</a>
