--- a/sysSetting/upgrade.html
+++ b/sysSetting/upgrade.html
@@ -4,13 +4,13 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>IGMP</title>
+    <title>Upgrade</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
-    <form name="web_sys_upgrade">
+    <form name="web_sys_upgrade" enctype="multipart/form-data">
         <table class="table table-striped table-bordered table-hover">
           <tr>
             <td height="20" colspan="3" class="tableTitle">软件升级</td>
@@ -30,8 +30,8 @@
             </tr>
           <tr>
             <td width="150" height="20">选择软件升级包：</td>
-            <td width="300" height="20"><input name="file_upgrade" type="file" id="file_upgrade" /></td>
-            <td width="150" height="20"><input name="btn_upgrade" type="button"  id="btn_upgrade"  value="升级" /></td>
+            <td width="300" height="20"><input name="file_upgrade" type="file" id="fileUpgrade" /></td>
+            <td width="150" height="20"><input name="btn_upgrade" type="button"  id="btnUpgrade"  value="升级" /></td>
           </tr>
           <tr>
             <td height="20" colspan="3">&nbsp;</td>
@@ -44,4 +44,19 @@
               </tr>
             </table>
         </form>
+        <script>
+          $("#btnUpgrade").on('click',function(){
+            let formData =new FormData();
+            let file =$("#fileUpgrade")[0].files[0];
+            if(typeof(file)!="undefined"){
+              formData.append('file',file);
+              $.post("/upgradeAjx/",function(data,status){
+                debugger;
+              });
+            }
+            else{
+              alert("文件为空!");
+            }
+          });
+        </script>
 </body>
