--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="EN" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <link > 
 <title>EOC</title>
 </head>
 <frameset cols="*" rows="100,*,22" border="0" frameborder="no" framespacing="0">
-<frame src="top.html" name="topframe" id="topframe" scrolling="no" noresize="noresize">
+<frame src="top.html" title="top" name="topframe" id="topframe" scrolling="no" noresize="noresize">
 <frameset cols="190,*" rows="*" border="0" frameborder="no" framespacing="0" >
-	<frame src="newmenu.html" name="menuframe" id="menuframe" scrolling="no" noresize="noresize">
-	<frame src="main.html" name="mainframe" id="mainframe" scrolling="yes" noresize="noresize">
+	<frame src="newmenu.html" title="menu" name="menuframe" id="menuframe" scrolling="no" noresize="noresize">
+	<frame src="main.html" title="main" name="mainframe" id="mainframe" scrolling="yes" noresize="noresize">
 </frameset>
-<frame src="bottom.html" name="bottomframe" id="bottomframe" scrolling="no" noresize="noresize">
+<frame src="bottom.html" title="bottom" name="bottomframe" id="bottomframe" scrolling="no" noresize="noresize">
 <noframes>
 <body >
 </body>
