--- a/newmenu.html
+++ b/newmenu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="EN" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -80,13 +80,7 @@
                                 <a href="./sysSetting/upgrade.html" target="mainframe">软件升级</a>
                             </li>
                             <li>
-                                <a>pib/fw升级</a>
-                            </li>
-                            <li>
                                 <a href="./sysSetting/log.html" target="mainframe">软件日志</a>
-                            </li>
-                            <li>
-                                <a href="./sysSetting/saveConfig.html" target="mainframe">保存配置</a>
                             </li>
                             <li>
                                 <a href="./sysSetting/reboot.html" target="mainframe">重启</a>
