--- a/sysSetting/cofiginfo.html
+++ b/sysSetting/cofiginfo.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <form name="sysConfigBackup" >
+    <form name="sysConfigBackup" action=/sysConfigBackup.cfg method="post">
         <table width="600" height="90" border="0" cellpadding="0" cellspacing="0">
           <tr>
             <td height="20" colspan="2" class="tableTitle">软件配置备份</td>
@@ -20,7 +20,10 @@
             <td height="20" colspan="2">&nbsp;</td>
             </tr>
           <tr>
-            <td width="100" height="20"><input type="submit" name="BT1" value="备份.."/></td>
+            <td width="100" height="20">
+              <button type="submit" class="btn btn-primary">备份
+              </button>
+            </td>
             <td width="500" height="20">保存所有配置信息到你所指定的位置上</td>
           </tr>
           <tr>
@@ -28,27 +31,8 @@
             </tr>
         </table>
         </form>
-        <form name="web_sys_restore_backup" >
-        <table width="600" height="110" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td height="20" colspan="2" class="tableTitle">软件配置恢复</td>
-            </tr>
-          <tr>
-            <td height="20" colspan="2">浏览选择配置文件（.cfg文件）后，点击“确定”，对软件进行配置信息恢复</td>
-            </tr>
-          <tr>
-            <td height="20" colspan="2">&nbsp;</td>
-            </tr>
-          <tr>
-            <td width="300" height="20"><input name="file_restore" type="file" id="file_restore" /></td>
-            <td width="300" height="20" align="center"><input type="submit" name="BT2" value="确定"/></td>
-            </tr>
-          <tr>
-            <td height="20" colspan="2">&nbsp;</td>
-            </tr>
-        </table>
         </form>
-        <form name="web_sys_restore_def">
+        <form name="web_sys_restore_def" action=/goform/sysRestore method="post">
           <table width="600" height="90" border="0" cellpadding="0" cellspacing="0">
             <tr>
               <td height="20" colspan="2" class="tableTitle">恢复出厂配置</td>
@@ -57,7 +41,9 @@
               <td height="20" colspan="2">&nbsp;</td>
             </tr>
             <tr>
-              <td width="100" height="20"><input type="submit" name="BT3" value="恢复出厂配置"/></td>
+              <td width="100" height="20">
+                <button type="submit" class="btn btn-primary">恢复出厂配置
+              </td>
               <td width="500" height="20" align="center">该设备将恢复到出厂时的默认配置，以前的配置信息将会全部丢失。</td>
             </tr>
             <tr>
