--- a/sysSetting/reboot.html
+++ b/sysSetting/reboot.html
@@ -20,7 +20,10 @@
             <td height="20" colspan="2">&nbsp;</td>
             </tr>
           <tr>
-            <td width="100" height="20"><input type="submit" name="BT1" value="重启"/></td>
+            <td width="100" height="20">
+              <button type="submit" class="btn btn-primary">重启
+              </button>
+            </td>
             <td width="500" height="20">设备重启前，请保存配置信息，重启期间，网络将自动断开。</td>
           </tr>
         </table>
