--- a/newmenu.html
+++ b/newmenu.html
@@ -74,7 +74,7 @@
                         </a>
                         <ul id="SysMain" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./sysSetting/cofiginfo.html" target="mainframe">配置信息</a>
+                                <a href="./sysSetting/configinfo.asp" target="mainframe">配置信息</a>
                             </li>
                             <li>
                                 <a href="./sysSetting/upgrade.html" target="mainframe">软件升级</a>
