--- a/newmenu.html
+++ b/newmenu.html
@@ -58,13 +58,13 @@
                         </a>
                         <ul id="L3Setting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a>111</a>
+                                <a href="./L3Protocal/rip.html" target="mainframe">Rip</a>
                             </li>
                             <li>
-                                <a>222</a>
+                                <a href="./L3Protocal/ospf.html" target="mainframe">Ospf</a>
                             </li>
                             <li>
-                                <a>333</a>
+                                <a href="./L3Protocal/staticRoute.html" target="mainframe">静态路由</a>
                             </li>
                         </ul>
                     </li>
