--- a/sysSetting/configinfo.html
+++ b/sysSetting/configinfo.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <h3
+    style="font-weight: bolder; text-align: center;background-color: rgb(241,241,241);height: 48px;line-height: 48px;">
+    配置</h3>
+  <br>
   <form name="sysConfigBackup" action=/sysConfigBackup.cfg method="post">
     <table width="600" height="90" border="0" cellpadding="0" cellspacing="0">
       <tr>
