--- a/sysSetting/log.html
+++ b/sysSetting/log.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <h3
+        style="font-weight: bolder; text-align: center;background-color: rgb(241,241,241);height: 48px;line-height: 48px;">
+        日志</h3>
+    <br>
     <form name="webSysLog" method="post">
         <table width="600" height="300" border="0" cellpadding="0" cellspacing="0">
             <tr>
@@ -28,9 +32,9 @@
             </tr>
             <tr>
                 <td width="600" height="30">
-                    <input type="button" name="BT1" value="下载日志"  />
-                    <input type="button" name="BT2" value="清空日志"  />
-                    <input type="button" name="BT3" value="刷新"/>
+                    <input type="button" name="BT1" value="下载日志" />
+                    <input type="button" name="BT2" value="清空日志" />
+                    <input type="button" name="BT3" value="刷新" />
                 </td>
             </tr>
         </table>
