--- a/sysSetting/upgrade.html
+++ b/sysSetting/upgrade.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Upgrade</title>
-    <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Upgrade</title>
+  <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
 </head>
+
 <body>
-    <form name="web_sys_upgrade" enctype="multipart/form-data">
-        <table class="table table-striped table-bordered table-hover">
-          <tr>
-            <td height="20" colspan="3" class="tableTitle">软件升级</td>
-            </tr>
-          <tr>
-            <td height="20" colspan="3">软件升级期间，设备不能断电。升级前，请做好配置信息备份准备，以便在完成后迅速恢复配置。</td>
-            </tr>
-          <tr>
-            <td height="20" colspan="3">&nbsp;</td>
-            </tr>
-          <tr>
-            <td width="150" height="20">当前软件版本：</td>
-            <td height="20" colspan="2">V1.0</td>
-            </tr>
-            <tr>
-            <td height="20" colspan="3">&nbsp;</td>
-            </tr>
-          <tr>
-            <td width="150" height="20">选择软件升级包：</td>
-            <td width="300" height="20"><input name="file_upgrade" type="file" id="fileUpgrade" /></td>
-            <td width="150" height="20"><input name="btn_upgrade" type="button"  id="btnUpgrade"  value="升级" /></td>
-          </tr>
-          <tr>
-            <td height="20" colspan="3">&nbsp;</td>
-            </tr>
-        </table>
-        <table style="display:none" id="loading_table" width="200" cellpadding="0" cellspacing="0" >
-              <tr>
-                <td width="32" height="32" ></td>
-                <td><span class="STYLE2">升级中</span>......</td>
-              </tr>
-            </table>
-        </form>
-        <script>
-          $("#btnUpgrade").on('click',function(){
-            let formData =new FormData();
-            let file =$("#fileUpgrade")[0].files[0];
-            if(typeof(file)!="undefined"){
-              formData.append('file',file);
-              $.post("/upgradeAjx/",function(data,status){
-                debugger;
-              });
-            }
-            else{
-              alert("文件为空!");
-            }
-          });
-        </script>
+  <h3
+    style="font-weight: bolder; text-align: center;background-color: rgb(241,241,241);height: 48px;line-height: 48px;">
+    升级</h3>
+  <br>
+  <form name="web_sys_upgrade" enctype="multipart/form-data">
+    <table class="table table-striped table-bordered table-hover">
+      <tr>
+        <td height="20" colspan="3" class="tableTitle">软件升级</td>
+      </tr>
+      <tr>
+        <td height="20" colspan="3">软件升级期间，设备不能断电。升级前，请做好配置信息备份准备，以便在完成后迅速恢复配置。</td>
+      </tr>
+      <tr>
+        <td height="20" colspan="3">&nbsp;</td>
+      </tr>
+      <tr>
+        <td width="150" height="20">当前软件版本：</td>
+        <td height="20" colspan="2">V1.0</td>
+      </tr>
+      <tr>
+        <td height="20" colspan="3">&nbsp;</td>
+      </tr>
+      <tr>
+        <td width="150" height="20">选择软件升级包：</td>
+        <td width="300" height="20"><input name="file_upgrade" type="file" id="fileUpgrade" /></td>
+        <td width="150" height="20"><input name="btn_upgrade" type="button" id="btnUpgrade" value="升级" /></td>
+      </tr>
+      <tr>
+        <td height="20" colspan="3">&nbsp;</td>
+      </tr>
+    </table>
+    <table style="display:none" id="loading_table" width="200" cellpadding="0" cellspacing="0">
+      <tr>
+        <td width="32" height="32"></td>
+        <td><span class="STYLE2">升级中</span>......</td>
+      </tr>
+    </table>
+  </form>
+  <script>
+    $("#btnUpgrade").on('click', function () {
+      let formData = new FormData();
+      let file = $("#fileUpgrade")[0].files[0];
+      if (typeof (file) != "undefined") {
+        formData.append('file', file);
+        $.post("/upgradeAjx/", function (data, status) {
+          debugger;
+        });
+      }
+      else {
+        alert("文件为空!");
+      }
+    });
+  </script>
 </body>
