--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="EN" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link > 
-<title>EOC</title>
+<title>中飞芯电</title>
 </head>
 <frameset cols="*" rows="100,*,22" border="0" frameborder="no" framespacing="0">
 <frame src="top.html" title="top" name="topframe" id="topframe" scrolling="no" noresize="noresize">
