--- a/L3Protocal/rip.html
+++ b/L3Protocal/rip.html
@@ -38,15 +38,35 @@
         <table class="table table-striped table-bordered " style="width: 95%;margin-top: 10px;">
             <thead>
                 <tr>
-                    <td>Network</td>
-                    <td>Next Hop</td>
-                    <td>Metric From</td>
-                    <td>Tag</td>
-                    <td>Time</td>
+                    <td width="20%">Network</td>
+                    <td width="20%">Next Hop</td>
+                    <td width="15%">Metric From</td>
+                    <td width="15%">Tag</td>
+                    <td width="15%">Time</td>
+                    <td>操作</td>
                 </tr>
             </thead>
             <tbody id="ripBody">
-
+                <td>
+                    <span name="txtNet" value="0.0.0.0/0">0.0.0.0/0</span>
+                </td>
+                <td>
+                    <span name="txtHop" value="0.0.0.0/0">0.0.0.0/0</span>
+                </td>
+                <td>
+                    <span name="txtMetric" value="0.0.0.0/0">0.0.0.0/0</span>
+                </td>
+                <td>
+                    <span name="txtTag" value="0.0.0.0/0">0.0.0.0/0</span>
+                </td>
+                <td>
+                    <span name="txtTime" value="0.0.0.0/0">0.0.0.0/0</span>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-primary" name="btnEdit" value="row1">编辑</button>
+                    <button type="button" class="btn btn-primary" style="margin-left:20px;" name="btnDelete"
+                        value="row1">删除</button>
+                </td>
             </tbody>
         </table>
     </div>
@@ -55,15 +75,39 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">新增Rip</h4>
+                    <h4 class="modal-title" id="myModalLabel">新增</h4>
                 </div>
                 <div class="modal-body">
                     <table class="table table-striped table-bordered">
                         <tbody>
                             <tr>
-                                <td>Route:</td>
+                                <td>Network:</td>
                                 <td>
-                                    <input id="editRoute" type="text" title="端口输入框" style="width: 100%;">
+                                    <input id="editNet" type="text" title="端口输入框" style="width: 100%;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Next Hop:</td>
+                                <td>
+                                    <span id="editHop"></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Metric From:</td>
+                                <td>
+                                    <span id="editMetric"></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Tag:</td>
+                                <td>
+                                    <span id="editTag"></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Time:</td>
+                                <td>
+                                    <span id="editTime"></span>
                                 </td>
                             </tr>
                         </tbody>
@@ -76,11 +120,19 @@
             </div>
         </div>
     </div>
+    <div>
+        <form id="hPostForm" method="post">
+            <input name="hId" value="" />
+            <input name="hType" value="" />
+        </form>
+    </div>
     <script>
         var currentStatus = 1;
         var dataset = [];
         var datainfo = [];
+        var selectNet = "";
         var html = ('');
+        var isCreateNew = false;
         function getData() {
             dataset = [
                 ["1.1.1.0/24", "2.1.1.1", "1 self", "0", "01:48"],
@@ -103,11 +155,15 @@
                 html = ('');
                 for (let i = 0; i < dCount; i++) {
                     html += ('<tr>');
-                    html += ('<td>' + dataset[i][0] + '</td>');
-                    html += ('<td>' + dataset[i][1] + '</td>');
-                    html += ('<td>' + dataset[i][2] + '</td>');
-                    html += ('<td>' + dataset[i][3] + '</td>');
-                    html += ('<td>' + dataset[i][4] + '</td>');
+                    html += ('<td><span name="txtNet" value="' + dataset[i][0] + '">' + dataset[i][0] + '</span></td>');
+                    html += ('<td><span name="txtHop" value="' + dataset[i][1] + '">' + dataset[i][1] + '</span></td>');
+                    html += ('<td><span name="txtMetric" value="' + dataset[i][2] + '">' + dataset[i][2] + '</span></td>');
+                    html += ('<td> <span name="txtTag" value="' + dataset[i][3] + '">' + dataset[i][3] + '</span></td>');
+                    html += ('<td><span name="txtTime" value="' + dataset[i][4] + '">' + dataset[i][4] + '</span></td>');
+                    html += ('<td>');
+                    html += ('<button type="button" class="btn btn-primary"  name="btnEdit" value="' + dataset[i][0] + '">编辑</button>');
+                    html += ('<button type="button" class="btn btn-primary" style="margin-left:20px;"  name="btnDelete" value="' + dataset[i][0] + '">删除</button>');
+                    html += ('</td');
                     html += ('</tr>');
                 }
                 $("#ripBody").html(html);
@@ -133,14 +189,44 @@
 
         $("#btnAdd").click(function () {
             $("#editRoute").val("");
+            selectNet = "";
+            isCreateNew = true;
+            $("#myModalLabel").html("新增");
+            $("#editNet").val("");
+            $("#editHop").html("");
+            $("#editMetric").html("");
+            $("#editTag").html("");
+            $("#editTime").html("");
             $("#modeModal").modal('show');
         });
 
         $("#btnRipSave").click(function () {
-            let route = $("#editRoute").val();
+            let route = $("#editNet").val();
             if (checkData(route)) {
                 alert("输入合法");
             }
+        });
+
+        $("#ripBody").on('click', '[name="btnEdit"]', function () {
+            isCreateNew = false;
+            $("#myModalLabel").html("修改");
+            selectNet = $(this).attr("value");
+            let network = $(this).parents("tr").find("[name='txtNet']").attr("value");
+            let hop = $(this).parents("tr").find("[name='txtHop']").attr("value");
+            let metric = $(this).parents("tr").find("[name='txtMetric']").attr("value");
+            let tag = $(this).parents("tr").find("[name='txtTag']").attr("value");
+            let time = $(this).parents("tr").find("[name='txtTime']").attr("value");
+            $("#editNet").val(network);
+            $("#editHop").html(hop);
+            $("#editMetric").html(metric);
+            $("#editTag").html(tag);
+            $("#editTime").html(time);
+            $("#modeModal").modal('show');
+        });
+
+        $("#ripBody").on('click', '[name="btnDelete"]', function () {
+            let network = $(this).parents("tr").find("[name='txtNet']").attr("value");
+            alert(network);
         });
 
         $(document).ready(function () {
