--- a/newmenu.html
+++ b/newmenu.html
@@ -58,7 +58,7 @@
                         </a>
                         <ul id="L3Setting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./L3Protocal/rip.html" target="mainframe">Rip</a>
+                                <a href="./L3Protocal/rip.asp" target="mainframe">Rip</a>
                             </li>
                             <li>
                                 <a href="./L3Protocal/ospf.html" target="mainframe">Ospf</a>
