--- a/L3Protocal/ospf.html
+++ b/L3Protocal/ospf.html
@@ -20,15 +20,78 @@
         <button type="button" class="btn btn-primary" id="btnDisable" style="margin-left: 20px;">不使能</button>
         <button type="button" class="btn btn-primary" id="btnAdd" style="margin-left: 20px;">新建</button>
     </div>
-
+    <div class="container-fluid" id="ospfInfo">
+        <div class="row" style="margin-top: 20px;">
+            <label class="col-md-offset-4 col-md-1 control-label" style="text-transform: uppercase;">label1:</label>
+            <label class="col-md-1 control-label" style="color: red;">lable</label>
+            <label class="col-md-1 control-label" style="text-transform: uppercase;">label2:</label>
+            <label class="col-md-1 control-label" style="color: red;">1</label>
+        </div>
+        <div class="row" style="margin-top: 20px;">
+            <label class="col-md-offset-4 col-md-1 control-label" style="text-transform: uppercase;">label3:</label>
+            <label class="col-md-1 control-label" style="color: red;"> label3</label>
+            <label class="col-md-1 control-label" style="text-transform: uppercase;">label4:</label>
+            <label class="col-md-1 control-label" style="color: red;"> label4</label>
+        </div>
+    </div>
+    <div id="ospfTable">
+        <table class="table table-striped table-bordered " style="max-width:600px;margin: 10px auto;">
+            <thead style="font-weight: bolder;">
+                <tr>
+                    <td width="20%">Network</td>
+                    <td width="10%">操作</td>
+                </tr>
+            </thead>
+            <tbody id="ospfBody">
+                <td>
+                    <span name="txtNet" value="0.0.0.0/0">0.0.0.0/0</span>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-primary" style="margin-left:20px;" name="btnDelete"
+                        value="row1">删除</button>
+                </td>
+            </tbody>
+        </table>
+    </div>
+    <div class="modal fade" id="modeModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">新增</h4>
+                </div>
+                <div class="modal-body">
+                    <table class="table table-striped table-bordered">
+                        <tbody>
+                            <tr>
+                                <td>Network:</td>
+                                <td>
+                                    <input id="editNet" type="text" title="端口输入框" placeholder="xxx.xxx.xxx.xxx/xx"
+                                        style="width: 100%;">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary" id="btnRipSave">提交更改</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
         var currentStatus = 1;
         var dataset = [];
-        function getData(){
-
+        var html = ('');
+        function getData() {
+            dataset = [
+                ["1.1.1.0/24"],
+                ["2.1.1.0/24"]
+            ];
         }
 
-        function loadPage(){
+        function loadPage() {
             if (!currentStatus) {
                 $("#btnAdd").attr("disabled", "disabled");
                 $("#btnDisable").attr("disabled", "disabled");
@@ -38,9 +101,38 @@
                 $("#btnAdd").removeAttr("disabled");
                 $("#btnDisable").removeAttr("disabled");
             }
+            let dCount = dataset.length;
+            if (currentStatus && dCount > 0) {
+                html = ('');
+                for (let i = 0; i < dCount; i++) {
+                    html += ('<tr>');
+                    html += ('<td><span name="txtNet" value="' + dataset[i][0] + '">' + dataset[i][0] + '</span></td>');
+                    html += ('<td>');
+                    html += ('<button type="button" class="btn btn-primary" style="margin-left:20px;"  name="btnDelete" value="' + dataset[i][0] + '">删除</button>');
+                    html += ('</td');
+                    html += ('</tr>');
+                }
+                $("#ospfBody").html(html);
+            }
         }
 
-        $(document).ready(function(){
+        $("#btnEnable").click(function () {
+            alert("111");
+        });
+
+        $("#btnDisable").click(function () {
+            alert("222");
+        });
+
+        $("#btnAdd").click(function () {
+            alert("333");
+        });
+
+        $("#ospfBody").on('click', '[name="btnDelete"]', function () {
+            alert($(this).attr("value"));
+        });
+
+        $(document).ready(function () {
             getData();
             loadPage();
         });
