--- a/L3Protocal/staticRoute.html
+++ b/L3Protocal/staticRoute.html
@@ -15,6 +15,9 @@
         style="font-weight: bolder; text-align: center;background-color: rgb(241,241,241);height: 48px;line-height: 48px;">
         静态路由</h3>
     <br>
+    <div style="height: 50px;">
+        <button type="button" class="btn btn-primary" id="btnAdd" style="margin-left: 20px;">新建</button>
+    </div>
     <div>
         <table class="table table-striped table-bordered " style="width: 95%;margin-top: 10px;">
             <thead style="font-weight: bolder;">
@@ -57,7 +60,7 @@
                     <td>1.1.1.111</td>
                     <td>active</td>
                     <td>
-                        <button type="button" class="btn btn-primary" name="btnEdit" value="row1">编辑</button>
+                        <!-- <button type="button" class="btn btn-primary" name="btnEdit" value="row1">编辑</button> -->
                         <button type="button" class="btn btn-primary" style="margin-left:20px;" name="btnDelete"
                             value="row1">删除</button>
                     </td>
@@ -76,18 +79,18 @@
                     <table class="table table-striped table-bordered">
                         <tbody>
                             <tr>
-                                <td>desk/mask:</td>
+                                <td>Desk/Mask:</td>
                                 <td>
-                                    <input id="editDesk" type="text" title="端口输入框" style="width: 100%;">
+                                    <input id="editDesk" type="text" title="ip输入框" placeholder="xxx.xxx.xxx.xxx/xx" style="width: 100%;">
                                 </td>
                             </tr>
                             <tr>
-                                <td>type:</td>
+                                <td>Next Hop:</td>
                                 <td>
-                                    <span id="editType"></span>
+                                    <input id="editHop" type="text" title="下一跳输入框" placeholder="xxx.xxx.xxx.xxx" style="width: 100%;">
                                 </td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <td>[d/m]</td>
                                 <td>
                                     <span id="editDm"></span>
@@ -104,13 +107,13 @@
                                 <td>
                                     <span id="editStatus"></span>
                                 </td>
-                            </tr>
+                            </tr> -->
                         </tbody>
                     </table>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                    <button type="button" class="btn btn-primary" id="btnRipSave">提交更改</button>
+                    <button type="button" class="btn btn-primary" id="btnStaticSave">提交更改</button>
                 </div>
             </div>
         </div>
@@ -118,10 +121,7 @@
     <div>
         <form id="hPostForm" method="post">
             <input name="hDesk" value="" />
-            <input name="hType" value="" />
-            <input name="hDm" value="" />
-            <input name="hType" value="" />
-            <input name="hType" value="" />
+            <input name="hHop" value="" />
         </form>
     </div>
     <script>
@@ -149,7 +149,7 @@
                     html += ('<td><span name="txtGateway" value="' + dataset[i][3] + '">' + dataset[i][3] + '</span></td>');
                     html += ('<td><span name="txtStatus" value="' + dataset[i][4] + '">' + dataset[i][4] + '</span></td>');
                     html += ('<td>');
-                    html += ('<button type="button" class="btn btn-primary"  name="btnEdit" value="' + dataset[i][0] + '">编辑</button>');
+                    //html += ('<button type="button" class="btn btn-primary"  name="btnEdit" value="' + dataset[i][0] + '">编辑</button>');
                     html += ('<button type="button" class="btn btn-primary" style="margin-left:20px;"  name="btnDelete" value="' + dataset[i][0] + '">删除</button>');
                     html += ('</td');
                     html += ('</tr>');
@@ -158,23 +158,41 @@
             }
         }
 
-        $("#staticBody").on('click', '[name="btnEdit"]', function () {
-            selectNet = $(this).attr("value");
-            let desk = $(this).parents("tr").find("[name='txtDesk']").attr("value");
-            let type = $(this).parents("tr").find("[name='txtType']").attr("value");
-            let dm = $(this).parents("tr").find("[name='txtDm']").attr("value");
-            let gateWay = $(this).parents("tr").find("[name='txtGateway']").attr("value");
-            let status = $(this).parents("tr").find("[name='txtStatus']").attr("value");
-            $("#editDesk").val(desk);
-            $("#editType").html(type);
-            $("#editDm").html(dm);
-            $("#editGateway").html(gateWay);
-            $("#editStatus").html(status);
-            $("#modeModal").modal('show');
-        });
+        function checkData(network,nexthop){
+            let regNetwork = /^(?:(?:[0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}(?:[0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\/([1-9]|[1-2]\d|3[0-2])$/;
+            let regHop = "";
+            return true;
+        }
+
+        // $("#staticBody").on('click', '[name="btnEdit"]', function () {
+        //     selectNet = $(this).attr("value");
+        //     let desk = $(this).parents("tr").find("[name='txtDesk']").attr("value");
+        //     let type = $(this).parents("tr").find("[name='txtType']").attr("value");
+        //     let dm = $(this).parents("tr").find("[name='txtDm']").attr("value");
+        //     let gateWay = $(this).parents("tr").find("[name='txtGateway']").attr("value");
+        //     let status = $(this).parents("tr").find("[name='txtStatus']").attr("value");
+        //     $("#editDesk").val(desk);
+        //     $("#editType").html(type);
+        //     $("#editDm").html(dm);
+        //     $("#editGateway").html(gateWay);
+        //     $("#editStatus").html(status);
+        //     $("#modeModal").modal('show');
+        // });
 
         $("#staticBody").on('click', '[name="btnDelete"]', function () {
             alert("delete");
+        });
+
+        $("#btnAdd").click(function () {
+            $("#modeModal").modal('show');
+        });
+
+        $("#btnStaticSave").click(function(){
+            let network = $("#editDesk").val();
+            let nexthop = $("#editHop").val();
+            if(checkData(network,nexthop)){
+                alert("输入合法");
+            }
         });
 
         $(document).ready(function () {
