--- a/newmenu.html
+++ b/newmenu.html
@@ -61,10 +61,10 @@
                                 <a href="./L3Protocal/rip.asp" target="mainframe">Rip</a>
                             </li>
                             <li>
-                                <a href="./L3Protocal/ospf.html" target="mainframe">Ospf</a>
+                                <a href="./L3Protocal/ospf.asp" target="mainframe">Ospf</a>
                             </li>
                             <li>
-                                <a href="./L3Protocal/staticRoute.html" target="mainframe">静态路由</a>
+                                <a href="./L3Protocal/staticRoute.asp" target="mainframe">静态路由</a>
                             </li>
                         </ul>
                     </li>
