--- a/L3Protocal/rip.html
+++ b/L3Protocal/rip.html
@@ -54,7 +54,7 @@
         <button type="button" class="btn btn-primary" id="btnAdd" style="margin-left: 20px;">新建</button>
     </div>
     <div class="container-fluid" id="ripInfo">
-        <div class="row" style="margin-top: 20px;">
+        <div class="row" style="margin: 20px 0px;">
             <label class="col-md-offset-4 col-md-3 control-label" id="info1">
 
             </label>
@@ -62,7 +62,7 @@
 
             </label>
         </div>
-        <div class="row" style="margin-top: 20px;">
+        <div class="row" style="margin: 20px 0px;">
             <label class="col-md-offset-4 col-md-3 control-label" id="info3">
 
             </label>
@@ -190,6 +190,9 @@
         </form>
         <form id="hEnableForm" style="visibility: hidden; display: none;" method="post" action="/goform/ripFormEnable">
             <input name="hEnable" value="" />
+        </form>
+        <form id="hRedisForm" style="visibility: hidden; display: none;" method="post" action="/goform/ripFormRedis">
+            <input name="hRedis" value="" />
         </form>
     </div>
     <script>
@@ -395,6 +398,13 @@
                 $("[name='hDelete']").val(route);
                 $("#hDeleteForm").submit();
             }
+        });
+
+        $("#btnSubmit").click(function(){
+            let tmpStr = selectednamelist.join(',');
+            debugger;
+            $("[name='hRedis']").val(tmpStr.trim());
+            $("#hRedisForm").submit();
         });
 
         $(document).ready(function () {
